--- a/first_lecture/first_lec_pd_blank.ipynb
+++ b/first_lecture/first_lec_pd_blank.ipynb
@@ -40,11 +40,100 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>date</th>\n",
+       "      <th>open</th>\n",
+       "      <th>close</th>\n",
+       "      <th>high</th>\n",
+       "      <th>low</th>\n",
+       "      <th>使用</th>\n",
+       "      <th>code</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>4306</th>\n",
+       "      <td>4306</td>\n",
+       "      <td>2019-09-16</td>\n",
+       "      <td>1083.0</td>\n",
+       "      <td>1099.00</td>\n",
+       "      <td>1103.95</td>\n",
+       "      <td>1083.00</td>\n",
+       "      <td>31371.0</td>\n",
+       "      <td>600519</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4307</th>\n",
+       "      <td>4307</td>\n",
+       "      <td>2019-09-17</td>\n",
+       "      <td>1094.0</td>\n",
+       "      <td>1094.01</td>\n",
+       "      <td>1106.66</td>\n",
+       "      <td>1087.00</td>\n",
+       "      <td>25196.0</td>\n",
+       "      <td>600519</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4308</th>\n",
+       "      <td>4308</td>\n",
+       "      <td>2019-09-18</td>\n",
+       "      <td>1108.5</td>\n",
+       "      <td>1148.90</td>\n",
+       "      <td>1150.00</td>\n",
+       "      <td>1108.18</td>\n",
+       "      <td>69314.0</td>\n",
+       "      <td>600519</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Unnamed: 0        date    open    close     high      low       使用  \\\n",
+       "4306        4306  2019-09-16  1083.0  1099.00  1103.95  1083.00  31371.0   \n",
+       "4307        4307  2019-09-17  1094.0  1094.01  1106.66  1087.00  25196.0   \n",
+       "4308        4308  2019-09-18  1108.5  1148.90  1150.00  1108.18  69314.0   \n",
+       "\n",
+       "        code  \n",
+       "4306  600519  \n",
+       "4307  600519  \n",
+       "4308  600519  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 从保存在本地磁盘的csv文件中读取数据\n",
-    "\n",
-    "# 查看数据格式\n"
+    "df = pd.read_csv('./maotai.csv')\n",
+    "# 查看数据格式\n",
+    "df.tail(3)\n",
+    "# df.info()\n",
+    "# df.describe()"
    ]
   },
   {
@@ -60,12 +149,149 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 使用drop函数，删除不需要的列\n"
+    "# 使用drop函数，删除不需要的列\n",
+    "df.drop(labels=[0,1],axis=0,inplace=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>date</th>\n",
+       "      <th>open</th>\n",
+       "      <th>close</th>\n",
+       "      <th>high</th>\n",
+       "      <th>low</th>\n",
+       "      <th>使用</th>\n",
+       "      <th>code</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2001-08-29</td>\n",
+       "      <td>5.777</td>\n",
+       "      <td>5.684</td>\n",
+       "      <td>5.781</td>\n",
+       "      <td>5.640</td>\n",
+       "      <td>53252.75</td>\n",
+       "      <td>600519</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2001-08-30</td>\n",
+       "      <td>5.668</td>\n",
+       "      <td>5.796</td>\n",
+       "      <td>5.860</td>\n",
+       "      <td>5.624</td>\n",
+       "      <td>48013.06</td>\n",
+       "      <td>600519</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>2001-08-31</td>\n",
+       "      <td>5.804</td>\n",
+       "      <td>5.782</td>\n",
+       "      <td>5.877</td>\n",
+       "      <td>5.749</td>\n",
+       "      <td>23231.48</td>\n",
+       "      <td>600519</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>5</td>\n",
+       "      <td>2001-09-03</td>\n",
+       "      <td>5.812</td>\n",
+       "      <td>5.779</td>\n",
+       "      <td>5.870</td>\n",
+       "      <td>5.757</td>\n",
+       "      <td>22112.09</td>\n",
+       "      <td>600519</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>6</td>\n",
+       "      <td>2001-09-04</td>\n",
+       "      <td>5.782</td>\n",
+       "      <td>5.852</td>\n",
+       "      <td>5.949</td>\n",
+       "      <td>5.762</td>\n",
+       "      <td>37006.77</td>\n",
+       "      <td>600519</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0        date   open  close   high    low        使用    code\n",
+       "2           2  2001-08-29  5.777  5.684  5.781  5.640  53252.75  600519\n",
+       "3           3  2001-08-30  5.668  5.796  5.860  5.624  48013.06  600519\n",
+       "4           4  2001-08-31  5.804  5.782  5.877  5.749  23231.48  600519\n",
+       "5           5  2001-09-03  5.812  5.779  5.870  5.757  22112.09  600519\n",
+       "6           6  2001-09-04  5.782  5.852  5.949  5.762  37006.77  600519"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Unnamed: 0', 'date', 'open', 'close', 'high', 'low', '使用', 'code'], dtype='object')"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,20 +448,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 计算到数据截至日期前，2019年持有的股票的总价值\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 计算2019年有几个月的数据\n"
+    "# 计算到数据截至日期前，2019年持有的股票的总价值\n"
    ]
   },
   {
@@ -244,12 +461,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 计算到数据截至日期前，2019年持有的股票的总价值\n"
+    "# 计算2019年有几个月的数据\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 计算到数据截至日期前，2019年持有的股票的总价值\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
