--- a/second_lecture/American_people.ipynb
+++ b/second_lecture/American_people.ipynb
@@ -529,7 +529,7 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "scrolled": true
+    "collapsed": true
    },
    "outputs": [
     {
@@ -2836,7 +2836,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
